--- a/src/styles.css
+++ b/src/styles.css
@@ -35,16 +35,24 @@ li {
     font-size: 25px;
     margin-right: 30px;
     cursor: pointer;
+  
 }
 
 li:hover {
     color: #ef7ca0;
     transition: 0.5s;
+
 }
 
 .link-menu {
     text-decoration: none;
     color: #ffff;
+
+}
+
+.link-menu:hover {
+    color: #ef7ca0;
+    transition: 0.5s;
 }
 
 .nome {
