--- a/src/responsive.css
+++ b/src/responsive.css
@@ -39,18 +39,29 @@
 }
 
 .projetos h2 {
-    font-size: -200px;
+    display: none;
 }
 
 .cards {
     flex-direction: column;
-    padding: 25% 25%;
+    padding: -5% 0%;
 
 
 }
 
 .card {
     border-radius: 100%;
+    height: 220px;
+    width: 300px;
+}
+
+.card p {
+    font-size: 12px;
+
+
+}
+.card img {
+    height: 80px;
 }
 
 }
